Add projects to front page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,7 +37,10 @@ layout: default
       {% include news.html %}
     {% endif %}
 
-
+    {% if page.projects %}
+      <hr>
+      {% include projects.html}
+    {% endif %}
 
     {% if page.selected_papers %}
       <hr>
