--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -19,12 +19,12 @@
             {%- if project.github -%}
             <div class="github-icon">
               <div class="icon" data-toggle="tooltip" title="Code Repository">
-                <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
+                <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i> Repo</a>
               </div>
               {%- if project.github_stars -%}
               <span class="stars" data-toggle="tooltip" title="GitHub Stars">
                 <i class="fas fa-star"></i>
-                <span id="{{ project.github_stars }}-stars"></span>
+                <span id="{{ project.github_stars }}-stars">{{ project.github_stars }} stars</span>
               </span>
               {%- endif %}
             </div>
